fix delete update by Huyen